<resources>
    <string name="app_name">LoginTest</string>
    <!-- Strings related to login -->
    <string name="prompt_email">User name/email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_screen">Welcome Screen</string>
    <string name="pushes_screen">Push notifications Screen</string>
    <string name="web_view_screen">Our web view Screen</string>
    <string name="welcome_label">Welcome user</string>
    <string name="hello_push_notification">Hello pushes</string>
    <string name="backup">backup</string>
    <string name="block">block</string>
    <string name="title_pattern">Product %1\$s</string>
    <string name="description_pattern">Product Description %1$s</string>
    <string name="open_list_screen">Please open list screen</string>
    <string name="show_push_notification">Please show push notification</string>
    <string name="open_web_view_screen">Please open web view screen</string>
</resources>
